# squiddio_pi

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  appveyor.yml  squiddio-plugin.xml.in
.circleci/: config.yml
ci/: appveyor-upload.sh  circleci-build-debian.sh  circleci-upload-flatpak.sh  circleci-upload.sh  travis-build-raspbian-armhf.sh
cmake/: PluginConfigure.cmake  PluginInstall.cmake  PluginPackage.cmake
flatpak/: Makefile  org.opencpn.OpenCPN.Plugin.squiddio.yaml
src/: squiddioPrefsDialogBase.h
